[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Game/black_image.png" type="Texture" id=1]
[ext_resource path="res://World/Main_Scene/GameEngine.gd" type="Script" id=2]
[ext_resource path="res://Assets/Game/Load Menus/ring_texture.png" type="Texture" id=3]
[ext_resource path="res://Assets/Game/Board/board.png" type="Texture" id=4]
[ext_resource path="res://Assets/Game/Board/mana.png" type="Texture" id=5]
[ext_resource path="res://Assets/Game/Board/Magical Night.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]

[sub_resource type="Theme" id=1]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]

[node name="Load_Canvas" type="CanvasLayer" parent="."]
layer = 4
offset = Vector2( 20, 660 )
scale = Vector2( 0.1, 0.1 )
transform = Transform2D( 0.1, 0, 0, 0.1, 20, 660 )

[node name="load_circle" type="TextureProgress" parent="Load_Canvas"]
margin_right = 1200.0
margin_bottom = 1200.0
rect_scale = Vector2( 0.2, 0.2 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 4
tint_under = Color( 0.380392, 0.380392, 0.380392, 0.705882 )
tint_progress = Color( 0.960784, 0.945098, 0, 1 )

[node name="GameEngine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Player1" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Player1"]
layer = 0

[node name="Label" type="Label" parent="Player1/CanvasLayer"]
margin_right = 190.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "Player 1 turn"

[node name="Player2" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Player2"]
layer = 0
visible = false

[node name="Label" type="Label" parent="Player2/CanvasLayer"]
margin_right = 81.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "Player 2 turn"

[node name="PlayerSwitch" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="PlayerSwitch"]
visible = false

[node name="resume_text" type="RichTextLabel" parent="PlayerSwitch/CanvasLayer"]
process_priority = 6
margin_right = 600.0
margin_bottom = 100.0
theme = SubResource( 1 )
custom_fonts/mono_font = SubResource( 4 )
text = "Hold DOWN to resume game for player 1."

[node name="Sprite" type="Sprite" parent="PlayerSwitch/CanvasLayer"]
position = Vector2( 441, 272 )
z_index = -10
texture = ExtResource( 1 )

[node name="Board_textures" type="CanvasLayer" parent="."]
layer = -1

[node name="board_sprite" type="Sprite" parent="Board_textures"]
texture = ExtResource( 4 )
offset = Vector2( 400, 240 )

[node name="mana_sprite" type="Sprite" parent="Board_textures"]
position = Vector2( 1220, 670 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 5 )
